# android_platform_prebuilts_misc

./: .gitattributes  Android.bp  BUILD.bazel  METADATA
.prebuilt_info/: prebuilt_info_common_ddmlib_annotations-prebuilt_jar.asciipb  prebuilt_info_common_ddmlib_common-prebuilt_jar.asciipb  prebuilt_info_common_ddmlib_ddmlib-prebuilt_jar.asciipb
common/android-support-test/: Android.bp
common/androidx-media3/: Android.bp  prepend-license.txt  update-from-gmaven.py
common/androidx-media3/manifests/androidx.media3.media3-effect/: AndroidManifest.xml
common/androidx-media3/manifests/androidx.media3.media3-muxer/: AndroidManifest.xml
common/androidx-media3/manifests/androidx.media3.media3-session/: AndroidManifest.xml
common/androidx-media3/manifests/androidx.media3.media3-transformer/: AndroidManifest.xml
common/androidx-test/: Android.bp  prepend-license.txt  update-from-gmaven.py
common/asm/: Android.bp
common/atf/: Android.bp  PREBUILT
common/ddmlib/: Android.bp
common/flickerlib/: Android.bp
common/flickerlib/trace_processor_shell/: AndroidManifest.xml
common/frameworks/: PREBUILT
common/jacoco/: Android.bp  build.gradle
common/jacoco/lib/: NOTICE.txt  README
common/layoutlib_api/: PREBUILT
common/ninepatch/: PREBUILT
common/robolectric/4.8.2/: Android.bp  classpath_jars.mk
common/robolectric/android-all/: update.gradle
common/sdk-common/: PREBUILT
common/tools-common/: PREBUILT
protobuf_vendorcompat/: Android.bp
protobuf_vendorcompat/arm/: PREBUILT
protobuf_vendorcompat/arm64/: PREBUILT
(+53 files in other folders)
